---
source: bin/tests/main.rs
expression: "&out"

---
[W09] Warning: Found unquoted splice expression
   ╭─[data/unquoted_splices.nix:7:3]
   │
 7 │   ${x}
   ·   ──┬─  
   ·     ╰─── Consider quoting this splice expression
───╯
[W09] Warning: Found unquoted splice expression
   ╭─[data/unquoted_splices.nix:8:3]
   │
 8 │   ${toString (x + y)}
   ·   ─────────┬─────────  
   ·            ╰─────────── Consider quoting this splice expression
───╯
[W09] Warning: Found unquoted splice expression
   ╭─[data/unquoted_splices.nix:9:5]
   │
 9 │   a.${toString x}
   ·     ──────┬──────  
   ·           ╰──────── Consider quoting this splice expression
───╯
[W09] Warning: Found unquoted splice expression
    ╭─[data/unquoted_splices.nix:12:3]
    │
 12 │ ╭─▶   ${
 14 │ ├─▶   }
    · │         
    · ╰───────── Consider quoting this splice expression
────╯

